--- a/index.html
+++ b/index.html
@@ -8,10 +8,18 @@
     <script defer src="js/date.js"></script>
     <!-- Javascript -->
     <script defer src="js/script.js"></script>
+    <!-- Link Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <!-- TITOLO -->
+    <h1 class="text-center">Grande Gatsby</h1>
+    <!-- TABELLA -->
+    <table class="table my-table">
+        <!-- CREATO CON JS -->
+    </table>
     
 </body>
 </html>
