--- a/index.html
+++ b/index.html
@@ -14,11 +14,18 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <!-- TITOLO -->
+<!-- SNACK 1-->
+<!--
+    TITOLO 
     <h1 class="text-center">Grande Gatsby</h1>
-    <!-- TABELLA -->
+    TABELLA
     <table class="table my-table">
-         <!-- CREATO CON JS -->
-    </table>
+        CREATO CON JS 
+   </table>
+-->
+
+<!-- PARAGRAFO BICICLETTA SNACK 3-->
+<p>La bicicletta con peso più basso è: <strong id="strong-paragraph"></strong></p>
+
 </body>
 </html>
