--- a/index.html
+++ b/index.html
@@ -24,8 +24,16 @@
    </table>
 -->
 
-<!-- PARAGRAFO BICICLETTA SNACK 3-->
+<!-- PARAGRAFO BICICLETTA SNACK 3
 <p>La bicicletta con peso più basso è: <strong id="strong-paragraph"></strong></p>
+--->
 
+<!-- SNACK 4-->
+<!--TITOLO-->
+    <h1 class="text-center">Serie A</h1>
+    <!--TABELLA-->
+    <table class="table my-table-snack">
+        <!--CREATO CON JS-->
+   </table>
 </body>
 </html>
